syntax = "proto3";

package ranker.v1.transfer;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/ranker/v1/transfer";
import "web3eye/nftmeta/v1/transfer/transfer.proto";
import "web3eye/basetype/v1/chain.proto";

service Manager {
  rpc GetTransfers(GetTransfersRequest) returns (nftmeta.v1.transfer.GetTransfersResponse) {}
  rpc CountTransfers(CountTransfersRequest) returns (nftmeta.v1.transfer.CountTransfersResponse) {}
}

message GetTransfersRequest{
  chain.ChainType ChainType = 10;
  string ChainID = 20;
  string Contract = 30;
  string TokenID = 40;
  int32 Offset = 50;
  int32 Limit = 60;
}

message CountTransfersRequest{
  chain.ChainType ChainType = 10;
  string ChainID = 20;
  string Contract = 30;
  string TokenID = 40;
  int32 Offset = 50;
  int32 Limit = 60;
}

